--- a/grc338/restaurantmenucss/index.html
+++ b/grc338/restaurantmenucss/index.html
@@ -4,7 +4,7 @@
 <head>
   <title>Restaurant Menu</title> 
   <meta name="viewport" content="width=device‑width, initial‑scale=1">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
