--- a/grc338/website-responsive/index.html
+++ b/grc338/website-responsive/index.html
@@ -1,1 +1,26 @@
+<!doctype html>  
+<html>  
+<head>  
+    <meta charset="UTF-8">  
+    <meta name="viewport" content="width=device-width, initial-scale=1">  
+    <link rel="stylesheet" type="text/css" href="style.css">  
+    <title>Home</title>  
+</head>   
+<body>  
 
+<a href="file:///Users/berganoconnell/Desktop/GrC%20338/website-content-hierarchy/index.html">
+<img src="greeneatslogo.png">
+</a>
+
+<div class="nav">
+<ul class="nav">
+    <li class="nav"><a class="nav" href="about.html">About</a></li>
+    <li class="nav"><a class="nav" href="location.html">Locations</a></li>
+    <li class="nav"><a class="nav" href="menu.html">Menu</a></li>
+</ul>
+</div>
+  
+<img src="greenbowl.png" alt="Tofu & Veggie Bowl.">
+    
+</body>  
+</html>
