--- a/grc338/website-responsive/menu.html
+++ b/grc338/website-responsive/menu.html
@@ -8,7 +8,7 @@
 </head>   
 <body>  
     
-    <a href="file:///Users/berganoconnell/Desktop/GrC%20338/website-content-hierarchy/index.html">
+    <a href="https://berganoconnell.github.io/grc338/website-responsive/">
     <img src="greeneatslogo.png">
     </a>
     
